// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayHeading can be inverted 1`] = `
<h1
  class="sc-aXZVg dcAHUT"
>
  The heading
</h1>
`;

exports[`DisplayHeading renders 1`] = `
<h1
  class="sc-aXZVg jRFWnJ"
>
  The heading
</h1>
`;
